Correct saving of checkpoints

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -215,8 +215,17 @@
       "outputs": [],
       "source": [
         "standard_args = {\n",
-        "    \"save_strategy\" : \"no\",\n",
-        "    \"evaluation_strategy\" : \"epoch\",\n",
+        "    \"save_strategy\" : \"steps\",\n",
+        "    \"save_steps\" : 0.01,\n",
+        "\n",
+        "    \"save_total_limit\" : 1,\n",
+        "    \"load_best_model_at_end\" : True,\n",
+        "    \"metric_for_best_model\" : \"accuracy\",\n",
+        "    \"greater_is_better\" : True,\n",
+        "\n",
+        "    \"evaluation_strategy\" : \"steps\",\n",
+        "    \"eval_steps\" : 0.01,\n",
+        "    \n",
         "    \"predict_with_generate\" : True,\n",
         "    \"per_device_train_batch_size\" : 16,\n",
         "    \"per_device_eval_batch_size\" : 16,\n",
@@ -251,7 +260,6 @@
         "    num_train_epochs = NUM_EPOCHS,\n",
         "    output_dir=\"task1\",\n",
         "    generation_max_length=32,\n",
-        "    metric_for_best_model=\"accuracy\",\n",
         ")"
       ]
     },
@@ -320,7 +328,6 @@
         "    num_train_epochs = NUM_EPOCHS,\n",
         "    output_dir=\"task2\",\n",
         "    generation_max_length=32,\n",
-        "    metric_for_best_model=\"accuracy\",\n",
         ")"
       ]
     },
@@ -522,7 +529,6 @@
         "    num_train_epochs = NUM_EPOCHS,\n",
         "    output_dir=\"task3\",\n",
         "    generation_max_length=128,\n",
-        "    metric_for_best_model=\"accuracy\",\n",
         ")"
       ]
     },
@@ -692,7 +698,6 @@
         "    num_train_epochs=NUM_EPOCHS,\n",
         "    output_dir=\"task4\",\n",
         "    generation_max_length=128,\n",
-        "    metric_for_best_model=\"accuracy\",\n",
         ")"
       ]
     },
